--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # VITE_API_URL="https://wework-backend.onrender.com" 
-VITE_API_URL="http://localhost:3000" 
+# VITE_API_URL="http://localhost:3000" 
+VITE_API_URL="https://weworkbackend-production.up.railway.app" 
