--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
+    "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.30.1"
