--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.552.0",
     "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
